<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:fillViewport="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/grey_light"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivAppName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:background="@color/grey_light"
                    android:src="@drawable/ic_appname" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#25DF0404"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="48dp"
                    >

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/circleImageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="363dp"
                        android:src="@drawable/demo_image"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="1dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/gilroybold"
                        android:maxLines="1"
                        android:paddingEnd="16dp"
                        android:text="@string/showMailName"
                        android:textColor="#000"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/circleImageView"
                        app:layout_constraintTop_toTopOf="@+id/circleImageView"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/gilroymedium"
                        android:text="@string/showMailDate"
                        android:textColor="#000"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/circleImageView"
                        app:layout_constraintTop_toBottomOf="@+id/tvName" />

                    <TextView
                        android:id="@+id/tvSubject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:textAlignment="textStart"
                        android:fontFamily="@font/sans_regular"
                        android:letterSpacing="0.02"
                        android:paddingHorizontal="10dp"
                        android:text="@string/showMailSubject"
                        android:textColor="#D9282828"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDate" />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layoutDownload"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/ic_light_mail_back"

                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvSubject">

                            <ImageView
                                android:id="@+id/ivAttachmentimage"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_attachment"
                                android:layout_margin="8dp"
                                android:layout_marginStart="8dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/tvAttachmentName"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tvAttachmentName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="@font/gilroymedium"
                                android:maxLength="20"
                                android:maxLines="1"
                                android:text="@string/showMailAttachmentName"
                                android:textColor="#000"
                                android:textSize="18sp"
                                android:layout_marginStart="32dp"
                                android:layout_marginEnd="64dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"/>

                            <TextView
                                android:id="@+id/tvSize"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/gilroybold"
                                android:text="@string/showMailAttachmentSize"
                                android:textColor="#000"
                                android:textSize="14sp"
                                android:layout_margin="8dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/tvAttachmentName"
                                app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <WebView
                        android:id="@+id/webview"
                        android:layout_width="390dp"
                        android:layout_height="250dp"
                        android:layout_marginTop="16dp"
                        android:paddingHorizontal="16dp"
                        android:scrollbars="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/layoutDownload" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>

